# linkedin_company_searcher

./: Dockerfile  README.md  pyproject.toml
input/: test2.csv
output/: output
src/: app.py  searcher.py
