[tool.poetry]
name = "linkedin-company-searcher"
version = "0.1.0"
description = ""
authors = ["Akirajin <thomas.ueda@alumni.usp.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
google = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
